Page MenuHome GnuPG

GPGME compile error
Closed, ResolvedPublic

Description

The files gpgme.h and gpgme.c differ on the function prototypes
'gpgme_get_sub_protocol' and 'gpgme_set_pinentry_mode' which cause the Oracle
Studio 12 compiler to error.

gpgme.h:
gpgme_protocol_t gpgme_get_sub_protocol (gpgme_ctx_t ctx)
gpgme_error_t gpgme_set_pinentry_mode (gpgme_ctx_t ctx, gpgme_pinentry_mode_t mode)

gpgme.c:
gpgme_error_t gpgme_get_sub_protocol (gpgme_ctx_t ctx)
gpgme_error_t gpgme_set_pinentry_mode (gpgme_ctx_t ctx, gpgme_keylist_mode_t mode)

Return type for gpgme_get_sub_protocol, first parameter type for
gpgme_set_pinentry_mode

Details

Version
1.4.3

Event Timeline

martylee set Version to 1.4.3.
martylee added a subscriber: martylee.

Fixed with commit f916ab7 to be released with 1.5.0 (hopefully this month)
Workaround is obvious.

Thanks.

werner claimed this task.