Fix type inconsistency between gpgme.h and gpgme.c.

* src/gpgme.c (gpgme_set_pinentry_mode): Fix type of MODE.
--

GnuPG-bug-id: 1617